# inkprint-backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  WHY.md  alembic.ini  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_dossier_envelopes.py  0003_persisted_text_and_scan_jobs.py
docs/: ARCHITECTURE.md  DEMO.md
docs/specs/: 00-canonicalize.md  01-signing.md  02-manifest.md  03-fingerprint.md  04-leak-scanner.md  05-api.md  06-evals.md  07-batch-and-envelope.md
evals/: fingerprint_pairs.yaml  leak_probe.yaml  report.md  tamper_tests.yaml
scripts/: dev.sh  generate_keys.py  set-secrets.sh
src/inkprint/: __init__.py  main.py
src/inkprint/api/routers/: batch.py  certificates.py  diff.py  dossiers.py  leak.py  search.py  verify.py
src/inkprint/core/: config.py  db.py  keys.py  r2.py
src/inkprint/evals/: fingerprint_eval.py  leak_eval.py  runner.py  tamper_eval.py
src/inkprint/fingerprint/: compare.py  embed.py  simhash.py
src/inkprint/leak/: common_crawl.py  huggingface.py  scanner.py  score.py  the_stack.py
src/inkprint/models/: __init__.py  base.py  certificate.py  envelope.py  leak.py
src/inkprint/platform/: health.py  logging.py  middleware.py  platform_token.py
src/inkprint/provenance/: c2pa_schema.json  canonicalize.py  envelope_builder.py  manifest.py  signer.py
src/inkprint/repositories/: __init__.py  certificate_repo.py  leak_repo.py
src/inkprint/schemas/: batch.py  certificate.py  envelope.py
src/inkprint/services/: batch_service.py  certificate_service.py  envelope_service.py  leak_service.py
tests/: conftest.py
tests/integration/: test_batch_and_envelope.py  test_certificate_flow.py  test_leak_real_cc.py
tests/unit/: test_batch_service_gaps.py  test_canonicalize.py  test_coverage_gaps.py  test_envelope_builder.py  test_evals.py  test_fingerprint.py  test_leak_scanner.py  test_leak_scorer.py  test_leak_service.py  test_manifest.py  test_placeholder.py  test_platform_logging.py  test_platform_token.py  test_remaining_coverage.py  test_repositories.py  test_signer.py
