[project]
name = "inkprint"
version = "0.1.0"
description = "Content provenance and AI-training-data leak detection"
readme = "README.md"
license = "BUSL-1.1"
authors = [
    { name = "Abdul-Muizz Anwar", email = "abdulmuizz1310@outlook.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cryptography>=43.0",
    "simhash>=2.1",
    "voyageai>=0.3",
    "boto3>=1.35",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-jose[cryptography]>=3.3",
    "jsonschema>=4.23",
    "langdetect>=1.0.9",
    "qrcode[pil]>=8.0",
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "vcrpy>=6.0",
    "polyfactory>=2.18",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-boto3>=1.35",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inkprint"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F841", "SIM117", "RUF059"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["inkprint"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "voyageai.*",
    "pgvector.*",
    "simhash.*",
    "langdetect.*",
    "jose.*",
    "prometheus_fastapi_instrumentator.*",
    "qrcode.*",
    "vcr.*",
    "yaml.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: slow end-to-end tests (CI-only)",
    "integration: requires Testcontainers / real Postgres",
]
